Stop relying on system locales use Babel
Changes to playbook, should suppport FreeBSD

and Debian 10 and Debian 11

--- a/ansible-mailserver/templates/nginx.conf.j2
+++ b/ansible-mailserver/templates/nginx.conf.j2
@@ -4,7 +4,7 @@ server {
 
     location / {
         include         uwsgi_params;
-        uwsgi_pass      unix:/var/www/django-cyradm/cyradm/mysite.sock;
+        uwsgi_pass      unix:{{ www_path[ansible_os_family] }}django-cyradm/cyradm/mysite.sock;
     }
     location /static {
         alias /var/www/django-cyradm/static;
