--- a/ansible-mailserver/templates/django_cyradm_settings.py.j2
+++ b/ansible-mailserver/templates/django_cyradm_settings.py.j2
@@ -134,7 +134,7 @@ USE_TZ = True
 # Static files (CSS, JavaScript, Images)
 # https://docs.djangoproject.com/en/3.0/howto/static-files/
 
-STATIC_ROOT = '/var/www/django-cyradm/static/'
+STATIC_ROOT = '{{www_path[ansible_os_family]}}django-cyradm/static/'
 STATIC_URL = '/static/'
 DJCYRADM_SYNCIMAP = True
 DJCYRADM_IMAP = {
